--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     </a>
                 </div><br><br>
                 <div class="project4">
-                    <a href="https://codepen.io/aravindan33/full/RwbqPea" target="_blank">
-                        <li>A ChatBot</li><br>
-                        <img src="resources/css/download (2).jpg" alt="Chatbot">
+                    <a href="https://codepen.io/aravindan33/full/dybQpYJ" target="_blank">
+                        <li>MadLibs Game</li><br>
+                        <img src="resources/css/download (2).jpg" alt="Madlibs Game">
                     </a>
 
                 </div>
